--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -6,6 +6,7 @@ disable=
     C0114, # missing-module-docstring
     C0115, # missing-class-docstring
     C0116, # missing-function-docstring
+    R0401, # cyclic-import
     R0903, # too-few-public-methods
 
 [pylint.BASIC]
