--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,4 +1,6 @@
-printWidth: 140
-tabWidth: 4
-singleQuote: true
-trailingComma: "es5"
+{
+    "printWidth": 140,
+    "tabWidth": 4,
+    "singleQuote": true,
+    "trailingComma": "es5"
+}
