--- a/server/server/logging_config.yml
+++ b/server/server/logging_config.yml
@@ -5,16 +5,16 @@ formatters:
     hivexplore_formatter:
         format: '%(asctime)s - %(name)s [%(levelname)s] - %(message)s'
 
-filters:
-    debug_info_filter:
-        (): ext://server.logger.DebugInfoFilter
+# filters:
+#     debug_info_filter:
+#         (): ext://server.logger.DebugInfoFilter
 
 handlers:
     console_stdout:
         class: logging.StreamHandler
         level: INFO
         formatter: hivexplore_formatter
-        filters: [debug_info_filter]
+        # filters: [debug_info_filter]
         stream: ext://sys.stdout
 
     console_stderr:
@@ -24,12 +24,10 @@ handlers:
         stream: ext://sys.stderr
 
     file:
-        class: logging.handlers.RotatingFileHandler
+        class: logging.FileHandler
         level: INFO
         formatter: hivexplore_formatter
         filename: ext://server.logger.log_filename
-        maxBytes: 1048576 # 1 MB
-        backupCount: 10
         encoding: utf8
 
 loggers:
