--- a/server/server/logging_config.yml
+++ b/server/server/logging_config.yml
@@ -27,7 +27,7 @@ handlers:
         class: logging.FileHandler
         level: INFO
         formatter: hivexplore_formatter
-        filename: ext://server.logger.log_filename
+        filename: ext://server.logger.LOG_FILENAME
         encoding: utf8
 
 loggers:
