--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,7 @@
         "primeicons": "^4.1.0",
         "primevue": "^3.3.4",
         "three": "^0.126.1",
-        "vue": "^3.0.0",
-        "vue-debounce": "^2.6.0"
+        "vue": "^3.0.0"
     },
     "devDependencies": {
         "@types/jest": "^24.0.19",
